--- a/Cliente/css/index.css
+++ b/Cliente/css/index.css
@@ -1,11 +1,42 @@
-#mER{
-	height: 1000px;
-	opacity:0.45;
-	-moz-opacity:0.45;
-	filter:alpha(opacity=45);
-	width: 950px;
-	background-attachment: fixed;
-	background-image: url(../img/waitingClock.gif);
-	background-repeat: no-repeat;
-	background-position: center center;
+body{
+	position:relative; 
+	background: url(../img/backGround.gif) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+h3{
+	font-family: Century Gothic;
+	font-size: 1000%;
+	-webkit-text-stroke: 2px black;
+	text-shadow: 0.1em 0.1em 0.2em black;
+	color: white;
+	padding-top: 2%;
+	padding-bottom: 5%
+}
+#waiting{
+	width: 40%;
+	height: 40%;
+}
+#esperandoRemove{
+	padding-top: 5%;
+}
+label{
+	font-family: Century Gothic;
+	font-size: 200%;
+	-webkit-text-stroke: 0.5px black;
+	color : white ;
+}
+canvas{
+	position:absolute;
+	left : 22%;
+}
+#register{
+	padding: 5% 5%;
+  border: #5CBDDE 2px solid;
+  border-radius: 20px;
+}
+#d-btnRegister{
+	margin-top: 1%;
 }
