--- a/Cliente/css/index.css
+++ b/Cliente/css/index.css
@@ -115,5 +115,7 @@ div#btn-msg{
 	background: grey;
 	height: 50px;
 	width: 50px;
-	color:grey;
+	font-family: Century Gothic;
+	font-size: 20px;
+	color:white;
 }
